# schedule-planner

./: .gitignore  .travis.yml  Calculator-Scale.html  Calculator-Solver.html  Calculator.html  LICENSE.txt  Main.html  README.md  SchedulePlanner-App.html  SchedulePlanner-Calculator-Scale.html  SchedulePlanner-Calculator-Solver.html  SchedulePlanner-Calculator.html  SchedulePlanner-Serialize.html  SchedulePlanner-Server.html  build.sbt  doc-index.html  index-frames.html  index.html  mini_Calculator-Scale.html  mini_Calculator-Solver.html  mini_Calculator.html  mini_Main.html  mini_SchedulePlanner-App.html  mini_SchedulePlanner-Calculator-Scale.html  mini_SchedulePlanner-Calculator-Solver.html  mini_SchedulePlanner-Calculator.html  mini_SchedulePlanner-Serialize.html  mini_SchedulePlanner-Server.html  schedule-planner.cabal  schedule-planner.haddock  source.html  stack.yaml
app/: Main.hs
app/assets/coffee/: main.coffee
app/calculator/: Calculator.scala  Main.scala
app/calculator/datamodel/: Lesson.scala
app/controllers/: Application.scala
app/form/: RequestForm.scala
app/views/: main.scala.html
conf/: routes
src/: Calculator.hs  Main.hs  Scale.hs  SchedulePlanner.hs
src/Calculator/: Scale.hs  Solver.hs
src/SchedulePlanner/: App.hs  Calculator.hs  Scraper.hs  Serialize.hs  Server.hs  Types.hs  Util.hs
src/SchedulePlanner/Calculator/: Scale.hs  Solver.hs
src/SchedulePlanner/Scraper/: Base.hs  TUDresden.hs
testsuite/: Test.hs  myhours.json  test.json  test_grab.py
util/: TestScr.hs  grab.py  out.json
