name: schedule-planner
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: LGPL-3
license-file: LICENSE
copyright: 2015
maintainer: development@justusadam.com
stability: experimental
synopsis: Find the ideal lesson layout
description:
category: Data
author: Justus Adam
data-dir: ""
extra-source-files: README.md

executable schedule-planner
    build-depends: base >=4, containers -any, json -any, options -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
