name: schedule-planner
version: 1.0.1.1
cabal-version: >=1.10
build-type: Simple
license: LGPL-3
license-file: LICENSE
copyright: 2015
maintainer: Justus Adam <development@justusadam.com>
stability: experimental
synopsis: Find the ideal lesson layout
description:
    Executable program for calculating layouts for fixed grid schedules as
    are used in many universities and schools.
    The primary data format for in- and output is json. A deployable server
    instance of this software is also available.
category: Data, Convenience, Planning
author: Justus Adam <development@justusadam.com>
-- data-dir: ""
extra-source-files: README.md
tested-with: GHC >= 7.10.1


Flag noscraper
  Default: False


library
  build-depends:
      base          >= 4.8 && <5
    , containers
    , aeson
    , options
    , transformers
    , bytestring
    , text
    , warp
    , wai
    , mtl
    , http-types
    , composition
    , HTTP
    , base-unicode-symbols
    , xml-conduit
    , classy-prelude
  exposed-modules:
    SchedulePlanner
    SchedulePlanner.App
    SchedulePlanner.Calculator
    SchedulePlanner.Serialize
    SchedulePlanner.Server
    SchedulePlanner.Types
    SchedulePlanner.Calculator.Scale
    SchedulePlanner.Calculator.Solver
    -- SchedulePlanner.Scraper
    SchedulePlanner.Scraper.Base
    -- SchedulePlanner.Scraper.TUDresden
    SchedulePlanner.Util
  default-language: Haskell2010
  hs-source-dirs: src
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
    , MultiParamTypeClasses
    , GADTs
    , TypeFamilies
    , TupleSections
    , ViewPatterns


executable schedule-planner
  build-depends:
      base
    , schedule-planner
    , base-unicode-symbols
    , bytestring
    , options
    , text
  ghc-options:
    -Wall
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/JustusAdam/schedule-planner.git


source-repository this
  type:     git
  branch:   master
  location: git://github.com/JustusAdam/schedule-planner.git
  tag:      1.0.0.1
